# semantica

./: .gitmodules  a.out  input.txt  main.cpp  makefile  parser.cpp  parser.h
10/: CMakeLists.txt  Makefile  MyGrammar.g4  main.cpp  test
6/: makefile  parser  parser.cpp  sem.cpp  sem.h
6cop/: CMakeLists.txt  makefile  parser  parser.cpp  sem.cpp  sem.h  vcpkg.json
6cop/tests/: CMakeLists.txt  lib_test.cpp
9/: e.l  e.tab.c  e.tab.h  e.y  lex.yy.c  makefile  stack.h  testfile.test
